login / register and other

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -16505,7 +16505,8 @@ Product Description
 }
 
 .login-one__form form input[type="text"],
-.login-one__form form input[type="email"] {
+.login-one__form form input[type="email"],
+.login-one__form form input[type="password"] {
   position: relative;
   display: block;
   border-radius: 10px;
@@ -16525,7 +16526,8 @@ Product Description
 }
 
 .login-one__form form input[type="text"]:focus,
-.login-one__form form input[type="email"]:focus {
+.login-one__form form input[type="email"]:focus,
+.login-one__form form input[type="password"]:focus {
   border-color: var(--tanspot-base);
   background-color: var(--tanspot-white);
 }
@@ -16559,6 +16561,22 @@ Product Description
 }
 
 .login-one__form form input[type="email"]:-ms-input-placeholder {
+  color: var(--tanspot-gray);
+}
+
+.login-one__form form input[type="password"]::-webkit-input-placeholder {
+  color: var(--tanspot-gray);
+}
+
+.login-one__form form input[type="password"]:-moz-placeholder {
+  color: var(--tanspot-gray);
+}
+
+.login-one__form form input[type="password"]::-moz-placeholder {
+  color: var(--tanspot-gray);
+}
+
+.login-one__form form input[type="password"]:-ms-input-placeholder {
   color: var(--tanspot-gray);
 }
 
